--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
-    "stylus": "^0.54.8"
+    "stylus": "^0.54.8",
+    "tailwindcss": "^2.2.19"
   },
   "engines": {
     "node": ">=12.21.0"
