--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "tailwindcss": "^2.2.19"
   },
   "engines": {
-    "node": ">=12.21.0"
+    "node": "16.10.0"
   },
   "scripts": {
     "start": "node app.js"
