--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@braitsch/express": "^1.1.8",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "emailjs": "^3.4.0",
     "moment": "^2.29.1",
