--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment-timezone": "^0.5.34",
     "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
     "stylus": "^0.54.8",
     "tailwindcss": "^2.2.19"
