--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
     "stylus": "^0.54.8",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^2.2.19",
+    "@azure/cognitiveservices-computervision": "^8.2.0"
   },
   "engines": {
     "node": "16.10.0"
