--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@tailwindcss/forms": "^0.3.4",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^16.0.1",
     "emailjs": "^3.4.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.7",
     "pug": "^3.0.2",
     "string-similarity": "^4.0.4",
     "stylus": "^0.54.8",
